[package]
name = "jagged_array"
description = "Owned `[[T]]`-like 2D array where each row can differ in length."
version = "0.2.4"
authors = ["Colin Wallace <wallacoloo@gmail.com>"]

repository = "https://github.com/Wallacoloo/jagged_array"
documentation = "https://docs.rs/jagged_array"
readme = "Readme.md"
keywords = ["multidimensional", "array", "data-structure", ]
categories = ["data-structures"]
license = "MIT/Apache-2.0"

[dependencies]
try_opt = "0.1"
serde = "1.0"
streaming-iterator = "0.1"
#streaming-iterator = { git = "https://github.com/sfackler/streaming-iterator" }

[dev-dependencies]
rand = "0.3"
serde_json = "1.0"
